@@ -1,5 +1,12 @@
 2005-12-01  Murray Cumming <murrayc@murrayc.com>
 
+	* docs/reference/Doxyfile.in: Add a newline after the 
+	newin xrefitem, to stop doxgygen associating the following 
+	text with the xrefitem, so properties and returns do not 
+	show up in the list of new API.
+
+2005-12-01  Murray Cumming <murrayc@murrayc.com>
+
 	* docs/tutorial/gtkmm-tut.xml: Remove link to 
 	non-existing drawing_area_text example. 
 	Bug #311176 from Jonathon Jongsma.
